# message_push_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
config/: logstash.conf
src/: kafka_publish.hpp  kafka_publish.py  main.cpp
src/hook_event/: hook_event.hpp
src/hook_event/event/: base_event.hpp  hook_event.hpp  hook_event_publisher.hpp
src/hook_event/publisher/: base_publisher.hpp  factory_publisher.hpp  kafka_publisher.hpp
src/hook_event/utils/: base64.hpp
src/watch/messages/: message.hpp  watch_message.hpp
src/watch/publisher/: base_publisher.hpp  factory_publisher.hpp  kafka_publisher.hpp
tests/: CMakeLists.txt  test_event.cpp  test_factory_publisher.cpp  test_message.cpp  test_publisher.cpp  test_watch_event_message_publisher.cpp
